--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,7 +128,7 @@
     }
 
     body {
-        @apply bg-background text-foreground;
+        @apply bg-background text-foreground selection:bg-primary selection:text-primary-foreground;
     }
 }
 
@@ -373,6 +373,32 @@
 
         &:hover {
             color: var(--purple-contrast);
+        }
+    }
+}
+
+/* Bubble menu */
+.bubble-menu {
+    background-color: var(--white);
+    border: 1px solid var(--gray-1);
+    border-radius: 0.7rem;
+    box-shadow: var(--shadow);
+    display: flex;
+    padding: 0.2rem;
+
+    button {
+        background-color: unset;
+
+        &:hover {
+            background-color: var(--gray-3);
+        }
+
+        &.is-active {
+            background-color: var(--purple);
+
+            &:hover {
+                background-color: var(--purple-contrast);
+            }
         }
     }
 }
