--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -174,19 +174,31 @@
   }
 
   h1 {
-    font-size: 2.25rem;
+    &,
+    & * {
+      font-size: 2.25rem !important;
+    }
   }
 
   h2 {
-    font-size: 1.875rem;
+    &,
+    & * {
+      font-size: 1.875rem !important;
+    }
   }
 
   h3 {
-    font-size: 1.5rem;
+    &,
+    & * {
+      font-size: 1.5rem;
+    }
   }
 
   h4 {
-    font-size: 1.25rem;
+    &,
+    & * {
+      font-size: 1.25rem;
+    }
   }
 
   h1,
@@ -287,7 +299,7 @@
 
     td,
     th {
-      border: 1px solid var(--gray-3);
+      border: 1px solid #000;
       box-sizing: border-box;
       min-width: 1em;
       padding: 6px 8px;
@@ -392,6 +404,7 @@
 @media print {
   .tiptap table th,
   .tiptap table td {
+    border: 2px solid #ccc !important;
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
   }
